Changed color of the unit's links

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -2,7 +2,8 @@
   color: #464077;
 }
 .Weather a {
-  color: #7069a9;
+  color: #5282d8;
+  /* color: #7069a9; */
 }
 .Weather a:hover {
   color: #7069a9;
